@@ -22,6 +22,7 @@ Bug fixes
  * Using ``order_by_relevance=False`` when searching with PostgreSQL now works (Mitchel Cabuloy)
  * Inline panel first and last sorting arrows correctly hidden in non-default tabs (Matt Westcott)
  * ``WAGTAILAPI_LIMIT_MAX`` now accepts None to disable limiting (jcronyn)
+ * In PostgreSQL, new default ordering when ranking of objects is the same (Bertrand Bordage)
 
 
 Upgrade considerations
